<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/user_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#192A21"
                app:cardCornerRadius="16dp"
                app:cardForegroundColor="#0FB5B5B5"
                app:layout_constraintBottom_toBottomOf="@+id/bellBtnIv"
                app:layout_constraintEnd_toStartOf="@+id/bellBtnIv"
                app:layout_constraintTop_toTopOf="@+id/bellBtnIv"
                app:strokeColor="#B5B5B5"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_coin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/_2456"
                        android:textColor="#B5B5B5" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <ImageView
                android:id="@+id/bellBtnIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_notification_fill"
                app:layout_constraintBottom_toBottomOf="@+id/profileIv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profileIv" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileIv" />

            <LinearLayout
                android:id="@+id/viewpagerDotsLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpager2"/>

            <TextView
                android:id="@+id/tournamentsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/play_tournament_by_games"
                android:textColor="@color/textgrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpagerDotsLl" />

            <TextView
                android:id="@+id/tournamentsViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/view_all"
                android:textColor="@color/green2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tournamentsTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tournamentsTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tournamentsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/tournament_item"
                tools:itemCount="3"
                android:padding="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tournamentsTv" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/black2"
                app:layout_constraintTop_toBottomOf="@id/tournamentsRv" />

            <ImageView
                android:id="@+id/createYourOwnTv"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/frame_2609248"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1" />


            <TextView
                android:id="@+id/battlesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/compete_in_battles"
                android:textColor="@color/textgrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createYourOwnTv" />

            <TextView
                android:id="@+id/battlesViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="View All"
                android:textColor="@color/green2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/battlesTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/battlesTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/battlesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="false"
                tools:listitem="@layout/battle_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/battlesTv" />



            <TextView
                android:id="@+id/peopleToFollowTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/people_to_follow"
                android:textColor="@color/textgrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/battlesRv" />

            <TextView
                android:id="@+id/followViewAllBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/view_more"
                android:textColor="@color/green2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/peopleToFollowTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/peopleToFollowTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/peopleToFollowRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:itemCount="3"
                tools:listitem="@layout/people_to_follow_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@+id/peopleToFollowTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>