<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.TournamentDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/game_background_iv"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/image_121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/registrationStatusCv"
            app:layout_constraintBottom_toBottomOf="@id/game_background_iv"
            app:layout_constraintStart_toStartOf="@id/game_background_iv"
            app:cardBackgroundColor="#B3021F0F"
            app:strokeWidth="0dp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:paddingVertical="6dp"
                android:paddingHorizontal="10dp"
                android:id="@+id/registrationStatusTv"
                android:text="@string/registration_closes_in_2d_15h_10m"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#B3021F0F"
            app:layout_constraintBottom_toBottomOf="@id/registrationStatusCv"
            app:layout_constraintEnd_toEndOf="@id/game_background_iv"
            app:layout_constraintTop_toTopOf="@id/registrationStatusCv"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <ImageView
                    android:id="@+id/groupIc"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_group"
                    app:tint="#1F8F52" />

                <TextView
                    android:id="@+id/coinsAmountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="6dp"
                    android:text="@string/_670_800"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:textStyle="bold"
            android:id="@+id/tournamentNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pubg_tournament"
            android:textColor="@color/textgrey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_background_iv" />

        <TextView
            android:id="@+id/entryCostTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Entry - 10"
            android:textColor="@color/textgrey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tournamentNameTv"
            app:layout_constraintTop_toBottomOf="@+id/tournamentNameTv" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_coin"
            app:layout_constraintBottom_toBottomOf="@+id/entryCostTv"
            app:layout_constraintStart_toEndOf="@+id/entryCostTv"
            app:layout_constraintTop_toTopOf="@+id/entryCostTv" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_gaming"
            app:layout_constraintBottom_toBottomOf="@+id/tournamentNameTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tournamentNameTv" />

        <com.google.android.material.tabs.TabLayout
            android:backgroundTint="@color/green"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/nav_item_colors"
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entryCostTv">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Overview" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Players" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rules" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Standings" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_gravity="bottom"
        android:backgroundTint="@color/green"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/green2"
            android:text="Join Tournament"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>